<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_0"
        android:layout_width="95.25dp"
        android:layout_height="100.8dp"
        android:layout_marginEnd="5dp"
        android:text="@string/button_0"
        app:layout_constraintEnd_toStartOf="@+id/button_equals"
        app:layout_constraintTop_toBottomOf="@+id/button_2" />

    <Button
        android:id="@+id/button_equals"
        android:layout_width="190.5dp"
        android:layout_height="100.8dp"
        android:layout_marginEnd="10dp"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_plus"
        tools:text="@string/button_equals" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="94dp"
        android:layout_height="100.8dp"
        android:layout_marginStart="5dp"
        android:text="@string/button_plus"
        app:layout_constraintStart_toEndOf="@+id/button_3"
        app:layout_constraintTop_toBottomOf="@+id/button_minun" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="94dp"
        android:layout_height="100.8dp"
        android:layout_marginStart="5dp"
        android:text="@string/button_3"
        app:layout_constraintStart_toEndOf="@+id/button_2"
        app:layout_constraintTop_toBottomOf="@+id/button_6" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="94dp"
        android:layout_height="100.8dp"
        android:layout_marginStart="5dp"
        android:text="@string/button_2"
        app:layout_constraintStart_toEndOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@+id/button_5" />

    <Button
        android:id="@+id/button_minun"
        android:layout_width="94dp"
        android:layout_height="100.8dp"
        android:layout_marginStart="5dp"
        android:text="@string/button_minun"
        app:layout_constraintStart_toEndOf="@+id/button_6"
        app:layout_constraintTop_toBottomOf="@+id/button_divide" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="94dp"
        android:layout_height="100.8dp"
        android:layout_marginStart="4dp"
        android:text="@string/button_6"
        app:layout_constraintStart_toEndOf="@+id/button_5"
        app:layout_constraintTop_toBottomOf="@+id/button_9" />

    <Button
        android:id="@+id/button_point"
        android:layout_width="95.25dp"
        android:layout_height="100.8dp"
        android:layout_marginStart="5dp"
        android:text="@string/button_point"
        app:layout_constraintEnd_toEndOf="@+id/button_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="94dp"
        android:layout_height="100.8dp"
        android:layout_marginStart="10dp"
        android:text="@string/button_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_4" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="94dp"
        android:layout_height="100.8dp"
        android:layout_marginStart="10dp"
        android:text="@string/button_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_7" />

    <Button
        android:id="@+id/button_divide"
        android:layout_width="94dp"
        android:layout_height="100.8dp"
        android:layout_marginStart="5dp"
        android:text="@string/button_divide"
        app:layout_constraintStart_toEndOf="@+id/button_9"
        app:layout_constraintTop_toBottomOf="@+id/button_multiply" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="94dp"
        android:layout_height="100.8dp"
        android:layout_marginStart="5dp"
        android:text="@string/button_9"
        app:layout_constraintStart_toEndOf="@+id/button_8"
        app:layout_constraintTop_toBottomOf="@+id/button_clean" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="94dp"
        android:layout_height="100.8dp"
        android:layout_marginStart="5dp"
        android:text="@string/button_8"
        app:layout_constraintStart_toEndOf="@+id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/button_backespace" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="94dp"
        android:layout_height="100.8dp"
        android:layout_marginStart="10dp"
        android:text="@string/button_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_backespace" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="94dp"
        android:layout_height="100.8dp"
        android:layout_marginStart="5dp"
        android:text="@string/button_5"
        app:layout_constraintStart_toEndOf="@+id/button_4"
        app:layout_constraintTop_toBottomOf="@+id/button_8" />

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="95.25dp"
        android:layout_height="100.8dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/button_multiply"
        app:layout_constraintStart_toEndOf="@+id/button_clean"
        app:layout_constraintTop_toBottomOf="@+id/TextView_Data" />

    <Button
        android:id="@+id/button_clean"
        android:layout_width="95.25dp"
        android:layout_height="100.8dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/button_clean"
        app:layout_constraintStart_toEndOf="@+id/button_backespace"
        app:layout_constraintTop_toBottomOf="@+id/TextView_Data" />

    <Button
        android:id="@+id/button_backespace"
        android:layout_width="190.5dp"
        android:layout_height="100.8dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:autoText="false"
        android:ellipsize="none"
        android:text="@string/button_backspace"
        android:textSize="34sp"
        android:verticalScrollbarPosition="defaultPosition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView_Data" />

    <TextView
        android:id="@+id/TextView_Data"
        android:layout_width="391dp"
        android:layout_height="87dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:accessibilityLiveRegion="none"
        android:foregroundGravity="left"
        android:text="0"
        android:textAlignment="textEnd"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>